--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
     "@langchain/community": "^0.3.56",
     "@langchain/core": "^0.3.77",
     "@langchain/langgraph": "^0.4.9",
-    "@langchain/openai": "^0.6.13"
+    "@langchain/openai": "^0.6.13",
+    "better-sqlite3": "^9.2.2",
+    "tiktoken": "^1.0.10",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
+    "@types/uuid": "^9.0.7"
   }
 }
