Add comprehensive ablation study framework
- Implement ReAct, ToT, and Reflect agent comparison system
- Add configurable ablation parameters (ToT width/depth, Reflect rounds)
- Include multiple implementation versions (full, clean, simple)
- Add results analysis and aggregation tools
- Organize all ablation study files in dedicated directory
- Update .gitignore for Python cache and Deno files
- Add comprehensive documentation and usage instructions

Features:
- Success@Strict and Success@Lenient evaluation
- Latency, cost, and tool call metrics
- Mock search functionality for testing without Tavily
- Clean implementation without observability tracing issues
- Structured results output in JSONL format

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,17 @@ Thumbs.db
 *.key
 *.pem
 secrets/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# Deno cache
+deno.lock
+
+# Ablation study results
+runs/
+*.jsonl
